--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,15 @@
 		"module": "commonjs",
 		"target": "es6",
         "lib": [
-            "es6"
+            "es6",
+            "dom"
         ],
 		"outDir": "out",
 		"rootDir": ".",
 		"sourceMap": true,
-		"watch": false
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"skipLibCheck": true
 	},
 	"exclude": [
 		"node_modules",
